--- a/src/sass/_bootstrap-variables-override.scss
+++ b/src/sass/_bootstrap-variables-override.scss
@@ -1,1 +1,5 @@
 // overrides here (do not use !default here)
+
+// fonts
+$font-family-sans-serif:  'Montserrat', sans-serif;
+$font-family-serif:       'Libre Baskerville', serif;
