--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -188,7 +188,7 @@
     height: 100%;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
-    padding: 74px 15% 20px 15%;
+    padding: 70px 15% 20px 15%;
     
     /* Force Hardware Acceleration in WebKit */
     -webkit-transform: translateZ(0);
@@ -255,7 +255,10 @@
   	text-align: center;
   	border-bottom: 1px solid rgba($white, .3);
     li {
-      margin: 1.5em 0;
+      margin: 1em 0;
+    }
+    li:first-child {
+      margin: 0 0 1em;
     }
 
     a {      
