--- a/src/img/icons/icons.fallback.css
+++ b/src/img/icons/icons.fallback.css
@@ -1,4 +1,59 @@
 
+.icon-daycount {
+	background-image: url('png/daycount.png');
+	background-repeat: no-repeat;
+}
+
+.icon-globe {
+	background-image: url('png/globe.png');
+	background-repeat: no-repeat;
+}
+
+.icon-indonesia {
+	background-image: url('png/indonesia.png');
+	background-repeat: no-repeat;
+}
+
+.icon-japan {
+	background-image: url('png/japan.png');
+	background-repeat: no-repeat;
+}
+
+.icon-language {
+	background-image: url('png/language.png');
+	background-repeat: no-repeat;
+}
+
+.icon-malaysia {
+	background-image: url('png/malaysia.png');
+	background-repeat: no-repeat;
+}
+
+.icon-map {
+	background-image: url('png/map.png');
+	background-repeat: no-repeat;
+}
+
+.icon-population {
+	background-image: url('png/population.png');
+	background-repeat: no-repeat;
+}
+
+.icon-suitcase {
+	background-image: url('png/suitcase.png');
+	background-repeat: no-repeat;
+}
+
+.icon-take-off {
+	background-image: url('png/take-off.png');
+	background-repeat: no-repeat;
+}
+
+.icon-thailand {
+	background-image: url('png/thailand.png');
+	background-repeat: no-repeat;
+}
+
 .icon-travel {
 	background-image: url('png/travel.png');
 	background-repeat: no-repeat;
@@ -41,45 +96,5 @@
 
 .icon-currency {
 	background-image: url('png/currency.png');
-	background-repeat: no-repeat;
-}
-
-.icon-daycount {
-	background-image: url('png/daycount.png');
-	background-repeat: no-repeat;
-}
-
-.icon-globe {
-	background-image: url('png/globe.png');
-	background-repeat: no-repeat;
-}
-
-.icon-indonesia {
-	background-image: url('png/indonesia.png');
-	background-repeat: no-repeat;
-}
-
-.icon-japan {
-	background-image: url('png/japan.png');
-	background-repeat: no-repeat;
-}
-
-.icon-language {
-	background-image: url('png/language.png');
-	background-repeat: no-repeat;
-}
-
-.icon-malaysia {
-	background-image: url('png/malaysia.png');
-	background-repeat: no-repeat;
-}
-
-.icon-population {
-	background-image: url('png/population.png');
-	background-repeat: no-repeat;
-}
-
-.icon-thailand {
-	background-image: url('png/thailand.png');
 	background-repeat: no-repeat;
 }
