--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -266,12 +266,15 @@
       color: $white;
       display: inline-block;
       text-decoration: none;
+      -moz-transition: all .2s;
+      -webkit-transition: all .2s;
+      transition: all .2s;
 
       &.selected {
         color: $yellow-base;
       }
 
-      .no-touch &:hover {
+      &:hover, &:active {
         color: $yellow-base;
       }
     }
@@ -291,12 +294,15 @@
       font-size: 1.6rem;
       color: $white;
       text-decoration: none;
+      -moz-transition: all .2s;
+      -webkit-transition: all .2s;
+      transition: all .2s;
 
       &.selected {
         color: $yellow-base;
       }
 
-      .no-touch &:hover {
+      &:hover, &:active {
         color: $yellow-base;
       }
     }
