--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -165,20 +165,13 @@ main {
   padding-left: 32px;
   color: $white;
   text-transform: uppercase;
-
+  @media only screen and (min-width: $screen-sm) {
+    font-size: 2rem;
+  } 
   @media only screen and (min-width: $screen-lg) {
     bottom: 50px;
     padding-left: 40px;
-    font-size: 1.8rem;
-  }
-
-  &.days {
-    @media only screen and (min-width: $screen-sm) {
-     font-size: 2rem;
-    } 
-    @media only screen and (min-width: $screen-lg) {
-     font-size: 2.5rem;
-    } 
+    font-size: 2.5rem;
   }
 }
 
@@ -204,6 +197,9 @@ main {
   font-weight: bold;
   letter-spacing: 1px;
   font-size: 1.7rem;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  transition: all 0.5s;
   @media only screen and (min-width: $screen-sm) {
     padding: 10px 30px;
     letter-spacing: 2px;
@@ -229,7 +225,7 @@ main {
     url('../img/homepage-vietnam.jpg');  
     background-position: 50% 90%;
     background-size: cover;
-    padding: 90px 0 50px;
+    padding: 75px 0 45px;
 
     h1 {
       font-family: $font-family-serif;
@@ -253,7 +249,7 @@ main {
     }
 
   @media only screen and (min-width: $screen-sm) {
-    padding: 130px 0 70px;
+    padding: 100px 0 50px;
     .numbers-count {
       font-size: 2.5rem;
       span {
@@ -262,7 +258,7 @@ main {
     }
   }
   @media only screen and (min-width: $screen-lg) {
-    padding: 160px 0 130px;
+    padding: 130px 0 90px;
     .numbers-count {
       font-size: 3rem;
       span {
@@ -275,20 +271,20 @@ main {
 .map-cta {
   background: 
   linear-gradient(
-    rgba($yellow-dark, .7),
-    rgba($yellow-dark, .7)
+    rgba($yellow-dark, .55),
+    rgba($yellow-dark, .55)
   ),
   url('../img/gmap-southeast-asia.jpg');
   background-size: cover;
   background-position: 50% 70%;
-  padding: 80px 0;
+  padding: 65px 0;
   text-align: center;
   
   @media only screen and (min-width: $screen-sm) {
-    padding: 120px 0;
+    padding: 90px 0;
   }
   @media only screen and (min-width: $screen-lg) {
-    padding: 140px 0;
+    padding: 110px 0;
   }
 }
 
@@ -404,25 +400,22 @@ main {
       &::before, &::after {
         content:'';
         position: absolute;
-        right: 0;
-        height: 65%;
-        padding-left:30px;
+        right: -1px;
+        height: 50%;
+        padding-left:3%;
         background: $grey-bg;
+        -ms-transform-origin: 100% 0;
+        -webkit-transform-origin: 100% 0;
+        transform-origin: 100% 0;
       }
       &::before {
-        top: -7%;
-        -ms-transform-origin: 100% 100%;
-        -webkit-transform-origin: 100% 100%;
-        transform-origin: 100% 100%;
+        bottom: 50%;        
         -ms-transform: skewY(45deg);
         -webkit-transform: skewY(45deg);
         transform: skewY(45deg);
       }
       &::after {
-        top: 65%;
-        -ms-transform-origin: 0 100%;
-        -webkit-transform-origin: 0 100%;
-        transform-origin: 0 100%;
+        top: 50%;
         -ms-transform: skewY(-45deg);
         -webkit-transform: skewY(-45deg);
         transform: skewY(-45deg);
@@ -432,18 +425,20 @@ main {
         margin-right: 0;
       }
       &.reverse::before, &.reverse::after {
-        left: 0;
-        right: auto;
-        padding-left:30px;
+        left: -1px;
+        right: auto;        
+        -ms-transform-origin: 0 100%;
+        -webkit-transform-origin: 0 100%;
+        transform-origin: 0 100%;
       }
       &.reverse::before {
-        top: -30%;
+        bottom: 50%;
         -ms-transform: skewY(-45deg);
         -webkit-transform: skewY(-45deg);
         transform: skewY(-45deg);
       }
       &.reverse::after {
-        top: 45%;
+        top: 50%;
         -ms-transform: skewX(45deg);
         -webkit-transform: skewX(45deg);
         transform: skewY(45deg);
@@ -681,6 +676,7 @@ footer {
   width: 100px;
   height: 40px;
   margin-top: 10px;
+  text-indent:-9999px;
 
   @media only screen and (min-width: $screen-sm) {
     width: 150px;
@@ -713,16 +709,17 @@ footer {
   position: absolute;
   bottom: 0;    
   left: 0;
-
+  @media only screen and (min-width: $screen-sm) {
+    bottom: 3px;
+  }
   @media only screen and (min-width: $screen-lg) {
     width: 30px;
-    height: 30px;    
+    height: 30px;       
   }
 }
 
 .icon-calendar {
-  background-size: 18%;
-  padding-left: 50px;
+  background-size: auto 36px;
   background-position: 12px 0;
 }
 
@@ -772,7 +769,7 @@ footer {
     width: 25%;
   }
   @media only screen and (min-width: $screen-lg) {
-    width: 25%;
+    width: 20%;
   }
 }
 .my-gallery figcaption {
