--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -217,16 +217,23 @@ main {
 
 .home-banner {  
   position: relative;
-  background: 
-    linear-gradient(
-      rgba($blue-base, .8), 
-      rgba($blue-base, .8)
-    ),
-    url('../img/homepage-vietnam.jpg');  
-    background-position: 50% 90%;
-    background-size: cover;
-    padding: 75px 0 45px;
-
+  background: rgba($blue-base, .8);
+  padding: 75px 0 45px;
+    i {
+      content: '';
+      background-image: url('../img/banners/homepage-vietnam-mob.jpg');  
+      background-position: 50% 90%;
+      background-size: cover;      
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      @media only screen and (min-width: $screen-sm) {
+        background-image: url('../img/banners/homepage-vietnam.jpg');  
+      }
+    }
     h1 {
       font-family: $font-family-serif;
     }
@@ -269,17 +276,25 @@ main {
 }
 
 .map-cta {
-  background: 
-  linear-gradient(
-    rgba($yellow-dark, .55),
-    rgba($yellow-dark, .55)
-  ),
-  url('../img/gmap-southeast-asia.jpg');
-  background-size: cover;
-  background-position: 50% 70%;
+  background: rgba($yellow-dark, .55);
   padding: 65px 0;
   text-align: center;
-  
+  position: relative;
+    i {
+      content: '';
+      background-image: url('../img/banners/gmap-southeast-asia-mob.jpg'); 
+      background-size: cover;
+      background-position: 50% 70%;     
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      @media only screen and (min-width: $screen-sm) {
+        background-image: url('../img/banners/gmap-southeast-asia.jpg');  
+      }
+    }
   @media only screen and (min-width: $screen-sm) {
     padding: 90px 0;
   }
@@ -338,6 +353,7 @@ main {
     height: 100%;
     width: 3px;
     background: $grey-line;
+    z-index: -2;
   }
 
   .country-block {           
@@ -345,52 +361,47 @@ main {
     font-size: 3rem;
     text-transform: uppercase;
     color: $white;    
-    background-position: center;      
-    background-size: 100%; 
+    background: rgba($grey-text, .6);
     -moz-transition: all .5s;
     -webkit-transition: all .5s;
     transition: all .5s;
 
-    &.jp {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/japan-small.jpg');
-      
+    i {
+      content: ''; 
+      background-position: center;
+      background-size: 100%;   
+      background-repeat: no-repeat;   
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      -moz-transition: background-size .3s;
+      -webkit-transition: background-size .3s;
+      transition: background-size .3s;      
     }
-    &.vt {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/vietnam-small.jpg');    
+
+    i.jp {
+      background-image: url('../img/banners/japan-small.jpg');      
     }
-    &.cb {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/cambodia-small.jpg');  
+    i.vt {
+      background-image: url('../img/banners/vietnam-small.jpg');    
     }
-    &.th {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/thailand-small.jpg');  
+    i.cb {
+      background-image: url('../img/banners/cambodia-small.jpg');  
     }
-    &.ml {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/malaysia-small.jpg');  
+    i.th {
+      background-image: url('../img/banners/thailand-small.jpg');  
     }
-    &.in {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/indonesia-small.jpg');  
+    i.ml {
+      background-image: url('../img/banners/malaysia-small.jpg');  
     }
-    &.tr {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/turkey-small.jpg');  
+    i.in {
+      background-image: url('../img/banners/indonesia-small.jpg');  
     }
-    &.gr {
-      background-image: 
-      linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-      url('../img/greece-small.jpg');  
+    i.tr {
+      background-image: url('../img/banners/turkey-small.jpg');  
     }
 
     @media only screen and (min-width: $screen-sm) {
@@ -439,8 +450,8 @@ main {
       }
       &.reverse::after {
         top: 50%;
-        -ms-transform: skewX(45deg);
-        -webkit-transform: skewX(45deg);
+        -ms-transform: skewY(45deg);
+        -webkit-transform: skewY(45deg);
         transform: skewY(45deg);
       }  
     }  
@@ -450,57 +461,20 @@ main {
     text-decoration: none;
   }
 
-  a:hover .country-block {    
-    color: $yellow-base;  
-    background-size: 110%;      
-
-    &.jp {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/japan-small.jpg');      
-    }
-    &.vt {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/vietnam-small.jpg');    
-    }
-    &.cb {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/cambodia-small.jpg');  
-    }
-    &.th {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/thailand-small.jpg');
-    }
-    &.ml {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/malaysia-small.jpg');
-    }
-    &.in {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/indonesia-small.jpg');
-    }
-    &.tr {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/turkey-small.jpg');
-    }
-    &.gr {
-      background-image: 
-      linear-gradient(rgba($blue-base, .7), rgba($blue-base, .7)),
-      url('../img/greece-small.jpg');
-    }
+  a:hover .country-block { 
+    background: rgba($blue-base, .7);
+    color: $yellow-base;      
+    i {
+      background-size: 110%;  
+    }    
   }
 
   .date-block {
-    span {
+    >div {
+      position: relative;
       font-family: $font-family-serif;
       background-color: $white;
-      padding: 10px 30px 10px 50px;
+      padding: 10px 30px 10px 55px;
       border: 2px solid $grey-circle;
       display: inline-block;
       margin-top: 15px;    
@@ -549,48 +523,67 @@ main {
 .country-banner {
   position: relative;
   text-align: center;
-  &.japan {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/japan-banner.jpg'); 
-    background-position: 100% 0; 
-  }  
-  &.vietnam {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/vietnam-banner.jpg');     
-  }  
-  &.cambodia {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/cambodia-banner.jpg');     
-  }  
-  &.thailand {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/thailand-banner.jpg');  
-    background-position: center 60%;    
-  }  
-  &.malaysia {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/malaysia-banner.jpg');    
-    background-position: 45% 0;
-  }  
-  &.indonesia {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/indonesia-banner.jpg');    
-    background-position: center 60%;
-  } 
-  &.turkey {
-    background-image: 
-    linear-gradient(rgba($grey-text, .6), rgba($grey-text, .6)),
-    url('../img/turkey-banner.jpg');  
-    background-position: center 60%;  
-  }  
-  background-size: cover;
   padding: 130px 0 100px;
+  background: rgba($grey-text, .6);
+  i {
+    content: ''; 
+    background-size: cover;    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  i.japan {
+    background-image: url('../img/banners/japan-banner-mob.jpg'); 
+    background-position: 100% 0; 
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/japan-banner.jpg'); 
+    }
+  }  
+  i.vietnam {
+    background-image: url('../img/banners/vietnam-banner-mob.jpg'); 
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/vietnam-banner.jpg'); 
+    }    
+  }  
+  i.cambodia {
+    background-image: url('../img/banners/cambodia-banner-mob.jpg');  
+    background-position: 55% 0;  
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/cambodia-banner.jpg');     
+    }   
+  }  
+  i.thailand {
+    background-image: url('../img/banners/thailand-banner-mob.jpg');  
+    background-position: center 60%;  
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/thailand-banner.jpg');  
+    }    
+  }  
+  i.malaysia {
+    background-image: url('../img/banners/malaysia-banner-mob.jpg');    
+    background-position: 45% 0;
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/malaysia-banner.jpg');    
+    } 
+  }  
+  i.indonesia {
+    background-image: url('../img/banners/indonesia-banner-mob.jpg');    
+    background-position: center 60%;
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/indonesia-banner.jpg');   
+    } 
+  } 
+  i.turkey {
+    background-image: url('../img/banners/turkey-banner-mob.jpg');  
+    background-position: center 60%;  
+    @media only screen and (min-width: $screen-sm) {
+      background-image: url('../img/banners/turkey-banner.jpg');   
+    } 
+  }  
+
   h1 {
     text-transform: uppercase;
     font-weight: bold;
@@ -718,9 +711,12 @@ footer {
   }
 }
 
-.icon-calendar {
-  background-size: auto 36px;
-  background-position: 12px 0;
+.icon-calendar {  
+  height: 35px;
+  width: 35px;
+  position: absolute;
+  top: 2px;
+  left: 15px;    
 }
 
 .icon-japan, .icon-cambodia, .icon-thailand, .icon-malaysia, .icon-indonesia, .icon-turkey, .icon-vietnam {
@@ -823,4 +819,8 @@ footer {
     margin: -60px 0 0 -60px;   
     color: $yellow-base;
     text-align: center;
+}
+
+.no-js .preloader {
+  display: none;
 }
