--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -54,21 +54,14 @@ a {
 }
 
 /* -------------------------------- 
-
 Header and nav styles
-
 -------------------------------- */
 @import 'header';
 
+
 /* -------------------------------- 
-
 Main Components 
-
 -------------------------------- */
-
-
-
-/*  ------------------------------- */
 
 main {
   position: relative;
@@ -659,7 +652,7 @@ footer {
   bottom: 0;
 }
 
-/* ICONS */
+/* --------------  ICONS -------------- */
 
 .icon {
   display: inline-block;
@@ -745,8 +738,7 @@ footer {
 }
 
 
-
-/* GALLERYYYYYYYYYYY */
+/* ----------  GALLERY ------------- */
 
 .my-gallery {
   width: 100%;
@@ -773,8 +765,7 @@ footer {
 }
 
 
-
-/* MAPPPPPPPPP */
+/* --------------- MAP ---------------- */
 
 .map-page, .map-page body, .map-page main, .map-page #map {
   height: 100%;
@@ -797,7 +788,8 @@ footer {
   bottom: 60px;
 }
 
-/* PRELOADER */
+
+/* -------------- PRELOADER -------------- */
 
 .preloader{
     position: fixed;
